# Oraculum

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SUBMISSION_REPORT.md  package.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/api/: response.ts  sep53.ts  server.ts
backend/src/api/middleware/: cors.ts  errorHandler.ts  rateLimiter.ts
backend/src/api/routes/: leaderboard.ts  markets.ts  oracle.ts  portfolio.ts  stats.ts
backend/src/cache/: redis.ts
backend/src/config/: constants.ts  env.ts
backend/src/db/: client.ts  migrate.ts
backend/src/db/migrations/: 001_initial_schema.sql  002_comments.sql  003_comment_signatures.sql
backend/src/events/: bus.ts
backend/src/indexer/: ammRefresh.ts  eventProcessor.ts  index.ts  soroban.ts
backend/src/indexer/handlers/: liquidityChanged.ts  marketCreated.ts  marketResolved.ts  oraclePrice.ts  rewardClaimed.ts  shared.ts  trade.ts
backend/src/ws/: server.ts
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/factory/test_snapshots/test/: create_market_deploys_and_registers.1.json  insufficient_liquidity_reverts.1.json
contracts/lp_token/: Cargo.toml
contracts/lp_token/src/: lib.rs  test.rs
contracts/lp_token/test_snapshots/test/: mint_burn_and_supply.1.json  mint_negative_fails.1.json
contracts/market/: Cargo.toml
contracts/market/src/: lib.rs  test.rs
contracts/no_token/: Cargo.toml
contracts/no_token/src/: lib.rs  test.rs
contracts/no_token/test_snapshots/test/: mint_burn_and_transfer.1.json  overdraw_burn_fails.1.json
contracts/oracle_registry/: Cargo.toml
contracts/oracle_registry/src/: lib.rs  test.rs
contracts/oracle_registry/test_snapshots/test/: approved_operator_can_submit_and_get_price.1.json  double_initialize_panics.1.json  get_price_at_respects_tolerance.1.json  get_price_fails_when_stale.1.json  initialize_sets_admin_and_threshold.1.json  latest_price_overwrites.1.json  non_operator_cannot_submit.1.json  register_duplicate_feed_fails.1.json  register_feed_and_list.1.json  revoked_operator_cannot_submit.1.json  submit_old_timestamp_fails.1.json  submit_to_unregistered_feed_fails.1.json  update_staleness_threshold_works.1.json
contracts/token_base/: Cargo.toml
contracts/token_base/src/: lib.rs
contracts/yes_token/: Cargo.toml
contracts/yes_token/src/: lib.rs  test.rs
contracts/yes_token/test_snapshots/test/: approve_and_transfer_from.1.json  burn_decreases_balance_and_supply.1.json  burn_from_with_allowance.1.json  cannot_burn_more_than_balance.1.json  cannot_transfer_more_than_balance.1.json  double_initialize_panics.1.json  expired_allowance_is_zero.1.json  initialize_sets_metadata.1.json  mint_increases_balance_and_supply.1.json  mint_zero_fails.1.json  transfer_from_exceeding_allowance_fails.1.json  transfer_moves_tokens.1.json
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/components/charts/: PriceChart.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx  nav.ts
frontend/src/components/market/: ActivityFeed.tsx  CommentsFeed.tsx  ExpiryCountdown.tsx  MarketCard.tsx  MarketIcon.tsx  MarketStatusBadge.tsx  MarketTabs.tsx  PriceBar.tsx  WatchButton.tsx
frontend/src/components/portfolio/: PortfolioSummaryCard.tsx
frontend/src/hooks/: use-stellar-wallet.ts  useData.ts  useMarketLive.ts  useMarketsLive.ts  usePortfolioLive.ts  useResolvedToasts.ts
frontend/src/lib/: amm.ts  api.ts  comment.ts  contract.ts  env.ts  format.test.ts  format.ts  socket.ts  stellar-sdk.ts  stellar-wallet.ts  types.ts
frontend/src/stores/: toast.ts  wallet.ts  watchlist.ts
scripts/: create-test-market.sh  deploy.sh  e2e.sh  setup-testnet.sh  submit-test-price.sh
(+17 files in other folders)
